Added full WebRTC implementation

--- a/WebRTCWebapp/src/app/components/session-call/session-call.component.html
+++ b/WebRTCWebapp/src/app/components/session-call/session-call.component.html
@@ -9,6 +9,7 @@
 </mat-toolbar>
 <div class="content">
   <div class="videos">
+    <video #localVideo id="localVideo" autoplay controls></video>
     <video #remoteVideo id="remoteVideo" autoplay controls></video>
   </div>
 </div>
