--- a/WebRTCWebApp/src/app/components/home/home.component.scss
+++ b/WebRTCWebApp/src/app/components/home/home.component.scss
@@ -21,3 +21,12 @@
 .main-text {
   font-size: 20px;
 }
+
+.form-field-select {
+  width: 350px;
+  text-align: center;
+}
+
+.form-field-div {
+  margin: 5px;
+}
