Added "SFU" topology conference call impl. with NodeJS media server

--- a/WebRTCWebApp/src/app/components/home/home.component.html
+++ b/WebRTCWebApp/src/app/components/home/home.component.html
@@ -34,7 +34,7 @@
       </mat-form-field>
     </div>
 
-    <div class="form-field-div" *ngIf="mode === 'star conference call'">
+    <div class="form-field-div" *ngIf="mode === 'Star Conference Call'">
       <mat-form-field class="form-field-select" appearance="fill">
         <mat-label>Client type</mat-label>
         <mat-select [(ngModel)]="clientType" name="clientType">
