--- a/WebRTCAndroidApp/app/src/main/res/layout/activity_main_smartglass.xml
+++ b/WebRTCAndroidApp/app/src/main/res/layout/activity_main_smartglass.xml
@@ -33,18 +33,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:hint="@string/act_main_room_name"
+            android:hint="@string/act_main_room_name_numbers"
             android:singleLine="true"
             android:textAlignment="center"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:inputType="number"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btn_start"
-        style="@android:style/Widget.DeviceDefault.Button.Small"
+        style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:background="@color/purple_500"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:text="@string/act_main_btn_start"
-        android:textColor="@android:color/white"
-        android:background="@color/purple_500"/>
+        android:textColor="@android:color/white" />
 </LinearLayout>
