--- a/WebRTCWebApp/src/app/components/session-call-openai/session-call-openai.component.scss
+++ b/WebRTCWebApp/src/app/components/session-call-openai/session-call-openai.component.scss
@@ -11,6 +11,12 @@ body {
   margin: 10px;
 }
 
+.transcription {
+  text-align: center;
+  margin: 15px;
+  font-style: italic;
+}
+
 .media {
   margin-top: 5px;
   text-align: center;
